sample/misc/error/trace_gen.bfr
let b = [
  + 0
]

codegen $

**let {} = {} in
  let {} = {} in $  // これはトレースしたくない

*b